--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.18",
+        "postcss-nesting": "^12.0.1",
+        "sass": "^1.69.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@tiptap/pm": "^2.1.11",
+        "@tiptap/starter-kit": "^2.1.11",
+        "@tiptap/vue-3": "^2.1.11",
+        "@vueup/vue-quill": "^1.2.0",
+        "floating-vue": "2.0.0-beta.24",
+        "vue-mention": "2.0.0-alpha.3"
     }
 }
